--- a/seizouqrmb.html
+++ b/seizouqrmb.html
@@ -920,9 +920,8 @@
 
 <script>
 /* ================== 設定 ================== */
-const CUT_START = 2;
 const CUT_LENGTH = 5;
-const MIN_QR_LENGTH = 33;
+const MIN_QR_LENGTH = 6;  // 記号+英数字5文字=最低6文字
 const ADMIN_QR = "ADMIN123";
 const LINE_KEY = "qr_line_name";
 const BUSHO_KEY = "qr_busho_name";
@@ -1057,7 +1056,13 @@ function checkAndResetAt8IfNeeded(){
 }
 
 function normalizeSeiriNo(s){ return String(s||"").trim().replace(/\s+/g,""); }
-function cutQR(qr){ return normalizeSeiriNo(String(qr||"").substr(CUT_START, CUT_LENGTH)); }
+function cutQR(qr){ 
+  // 先頭の記号（スペース、コロン、アンド、セミコロン）を除去
+  const cleaned = String(qr || "").replace(/^[\s:&;]+/, '');
+  // 最初の5文字を切り出し
+  const extracted = cleaned.substr(0, CUT_LENGTH);
+  return normalizeSeiriNo(extracted); 
+}
 function esc(s){ return String(s??"").replace(/[&<>"']/g, m=>({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[m])); }
 
 function showOK(){
@@ -1544,7 +1549,7 @@ async function processQR(qrRaw){
   
   const now = nowString();
   const sliced = cutQR(qrRaw);
-  updateDebugLog(`✂️ 切り出し: "${sliced}"`);
+  updateDebugLog(`✂️ 切り出し: "${qrRaw}" → "${sliced}"`);
   
   if (baseQR && !isLocked && prodStatus !== PROD_STATUS.RUNNING) {
     setProdStatus(PROD_STATUS.RUNNING, "FORCE_RUNNING_BY_SCAN");
