--- a/seizouqrmb.html
+++ b/seizouqrmb.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -1542,11 +1543,15 @@ async function processQR(qrRaw){
   
   updateDebugLog(`🔍 QR処理: "${qrRaw}" (長さ:${String(qrRaw).length})`);
   
+  // 短すぎるQRは静かに無視（スキャナーのSuffix等のゴミデータ対策）
   if(!qrRaw || String(qrRaw).length < MIN_QR_LENGTH){
     clearBuffer();
-    const msg = `QR長さ不足: ${String(qrRaw||"").length} < ${MIN_QR_LENGTH}`;
-    updateDebugLog(`❌ ${msg}`);
-    logRow([nowString(), String(qrRaw||""), "-", "QR_TOO_SHORT", "IGNORE", "", lineName, bushoName, prodStatus], {good:0});
+    // デバッグモード時のみログに表示
+    if(DEBUG_QR){
+      const msg = `QR長さ不足: ${String(qrRaw||"").length} < ${MIN_QR_LENGTH}`;
+      updateDebugLog(`⚠️ ${msg} (静かに無視)`);
+    }
+    // CSVログには残さない（ゴミデータなので）
     return;
   }
   
